--- a/G3-architects/index.html
+++ b/G3-architects/index.html
@@ -48,10 +48,11 @@
         </div>
         <div class="content">
             <h1>
-              <span class="grey">Quick list</span>of Our <span class="yellow">Features</span>  
+              <span class="grey">Quick list</span> of Our <br>
+              <span class="yellow">Features</span>  
             </h1>
             <p class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-            <button class="btn">Explore more</button>
+            <button class="btn"><a href="">Explore more</a></button>
         </div>
     </section>
    </main>
